[package]
name = "stm32f469xx"
version = "0.2.0"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
keywords = ["no-std", "arm", "stm32", "stm32f4"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "svd2rust generated peripheral access library for the stm32f469xx microcontroller family"
repository = "https://github.com/xd009642/stm32f469xx.git"

[dependencies]
bare-metal = "0.1.1"
cortex-m = "0.4.0"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.0"

[features]
rt = ["cortex-m-rt/device"]
